packages/next-swc/crates/core/tests/errors/next-font-downloaders/arg-not-object/input.js
import { Inter, Sacramento } from '@next/google-fonts'
fn(10)
Inter(10)
const s = Sacramento([''])
